--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+  flutter_hooks: ^0.17.0
+  hooks_riverpod: ^0.14.0+4
+  freezed_annotation: ^0.14.2
+  firebase_core: ^1.2.0
+  firebase_auth: ^1.2.0
+  google_sign_in: ^5.0.3
+  get_it: ^7.1.3
+  injectable: ^1.4.1
+  auto_route: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^0.14.2
+  build_runner: ^2.0.4
+  injectable_generator: ^1.4.1
+  auto_route_generator: ^2.1.0
+  dartz: ^0.10.0-nullsafety.2
+  flutter_svg: 0.22.0
+  json_serializable: 4.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,12 +75,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
