--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   flutter_hooks: ^0.17.0
   hooks_riverpod: ^0.14.0+4
   freezed_annotation: ^0.14.2
+  cloud_firestore: 2.2.1
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
+
   google_sign_in: ^5.0.3
   get_it: ^7.1.3
   injectable: ^1.4.1
