--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,25 +31,25 @@ dependencies:
   flutter_hooks: ^0.17.0
   hooks_riverpod: ^0.14.0+4
   freezed_annotation: ^0.14.2
-  cloud_firestore: 2.2.1
-  firebase_core: ^1.2.0
-  firebase_auth: ^1.2.0
-
-  google_sign_in: ^5.0.3
-  get_it: ^7.1.3
+  cloud_firestore: 2.2.2
+  firebase_core: 1.3.0
+  firebase_auth: 1.4.1
+  google_sign_in: 5.0.4
+  get_it: 7.0.0
   injectable: ^1.4.1
   auto_route: ^2.2.0
+  dartz: 0.10.0-nullsafety.2
+  flutter_svg: 0.22.0
+  json_serializable: 4.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^0.14.2
-  build_runner: ^2.0.4
-  injectable_generator: ^1.4.1
+  build_runner: 2.0.5
+  injectable_generator: 1.4.1
   auto_route_generator: ^2.1.0
-  dartz: ^0.10.0-nullsafety.2
-  flutter_svg: 0.22.0
-  json_serializable: 4.1.3
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
